# carbon14-xyz

./: .gitignore  README.md  docker-compose.yaml
avatars/: Cargo.toml  Dockerfile  Makefile
avatars/sql/: 00000_init.up.sql
avatars/src/: data.rs  imagekit.rs  main.rs  models.rs  pg_pool.rs
cert/: create.sh
dex/: config.docker.yaml
ingress/: Dockerfile
ingress/conf.d/: default.conf
ingress/html/: index.html
kubernetes/: .flux.yaml
kubernetes/base/ingress-nginx/: kustomization.yaml  mandatory.yaml
kubernetes/main/: kustomization.yaml
scrapers/: Cargo.toml
scrapers/twitch-api/: Cargo.toml
scrapers/twitch-api/src/: lib.rs
scrapers/twitch-profile-images/: Cargo.toml
scrapers/twitch-profile-images/src/: main.rs
