[package]
name = "avatars"
version = "0.1.0"
authors = ["DmitryDodzin <d.dodzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.4" }
deadpool-postgres = { version = "0.7" }
envy = "0.4"
dotenv = "0.15"
failure = "0.1"
serde = "1.0"
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
