[package]
name = "avatars"
version = "0.1.0"
authors = ["DmitryDodzin <d.dodzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.4" }
dotenv = "0.15"
failure = "0.1"
lazy_static = "1.4"
regex = "1.4"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
