[package]
name = "twitch-profile-images"
version = "0.1.0"
authors = ["Dmitry Dodzin <d.dodzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
twitch-api = { path = "../twitch-api" }
